# data-scraping

./: .cursorrules  .gitignore  INITIAL.md  README.md  diagram.md  pyproject.toml
.cursor/: execute-prp.mdc
.cursor/rules/: cursorrules.mdc  execute-prp.mdc  generate-prp.mdc
PRPs/: phase1-core-models.md  phase2-message-queue.md  phase3-script-manager.md  phase4-worker-system.md  phase5-gateway-api.md  phase6-integration-optimization.md
cache/scripts/my_test_script/: scraper.py
deploy/: deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  env.example
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  prometheus.yml
examples/: README.md  basic_structure.py  queue_usage.py  test_pattern.py  worker_usage.py
examples/models/: basic_usage.py
examples/scripts/: usage_example.py
src/: __init__.py  exceptions.py
src/api/: __init__.py  auth.py  main.py  models.py
src/api/endpoints/: __init__.py  metrics.py  websocket.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  base.py  enums.py
src/monitoring/: __init__.py  metrics.py
src/queue/: __init__.py  rabbitmq_rpc.py  task_manager.py  worker_monitor.py
src/scripts/: __init__.py  cache_manager.py  downloader.py  metadata.py  repository.py
src/utils/: __init__.py  helpers.py  logging.py
src/worker/: __init__.py  process_manager.py  script_executor.py  worker_main.py
tests/: test_api.py  test_config.py  test_e2e_integration.py  test_exceptions.py  test_integration.py  test_models.py  test_performance.py  test_queue.py  test_scripts.py  test_utils.py  test_worker.py
